Create:  navbar and hero

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,12 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Restaurant Apps Starter Project</title>
+    <title> Spicy Heat </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@500&family=Parisienne&family=Satisfy&family=Yesteryear&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-<h1>Restaurant Apps Starter Project</h1>
-<p>Hallo coders! Anda berhasil menjalankan starter project.</p>
-<p>Jangan lupa untuk menggunakan salah satu gambar yang berada pada ./images/heros sebagai background hero elemen</p>
-<img src="./images/heros/hero-image_2.jpg" width="450" alt="">
+<div class="wrapper">
+    <nav class="navbar">
+        <a href="#" class="logo"> Spicy Heat
+            <img src="#" alt="spicy-heat-logo logo">
+        </a>
+        </a>
+        <ul class="nav-links">
+            <li class="nav-item">
+                <a href="#"> About </a>
+            </li>
+            <li class="nav-item">
+                <a href="#"> Favorite </a>
+            </li>
+            <li class="nav-item">
+                <a href="#"> About US </a>
+            </li>
+        </ul>
+    </nav>
+</div>
+<section class="hero">
+    <!-- <div class="tint"> -->
+    <h1 class="hero-title">
+        Welcome <br> To Spicy Heat
+    </h1>
+    <!-- </div> -->
+</section>
+<div class="content">
+    <div class="catalouge">
+        <h4 class="catalouge-label"> Find your favorite place </h4>
+        <catalouge-item></catalouge-item>
+    </div>
+</div>
 </body>
 </html>
