--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,88 @@
-img {
-    display: block;
+html {
+    box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    width: 100%;
+    background-color: darkgreen;
+}
+
+nav {
+    margin: 0 auto;
+    width: 80%;
+    padding: 20px 10px 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    display: inline-block;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+}
+
+.nav-item a {
+    display: inline-block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: white;
+}
+
+.nav-item:hover {
+    background-color: white;
+}
+
+.nav-item:hover a {
+    color: darkgreen;
+}
+
+.logo img {
+    width: 175px;
+    vertical-align: middle;
+}
+
+.hero {
+    min-height: 60vh;
+    background-image: url('/images/heros/hero-image_2.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.85;
+}
+
+
+.hero h1 {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    padding: 10px 5em;
+    text-align: center;
+    font-family: 'Crimson Pro', serif;
+    font-size: 100px;
+    text-shadow: 2px 2px #000022;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+}
+
+.catalouge {
+    width: 80%;
+    background-color: yellow;
+    display: flex;
+    justify-content: center;
 }
