Create: content & navbar

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <title> Spicy Heat </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@500&family=Parisienne&family=Satisfy&family=Yesteryear&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crimson+Pro:wght@500&family=Roboto&display=swap"
         rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
     <nav class="navbar">
-        <a href="#" class="logo"> Spicy Heat
-            <img src="#" alt="spicy-heat-logo logo">
+        <a href="#" class="logo">
+            <img src="/images/logo/logo.png" alt="spicy-heat-logo logo">
         </a>
         </a>
         <ul class="nav-links">
@@ -36,10 +37,14 @@
     <!-- </div> -->
 </section>
 <div class="content">
-    <div class="catalouge">
-        <h4 class="catalouge-label"> Find your favorite place </h4>
-        <catalouge-item></catalouge-item>
+    <div class="content-header">
+        <h2 class="catalouge-label"> Find your favorite place </h2>
     </div>
+    <div class="content-body">
+        <div class="catalouge">
+            <catalouge-item></catalouge-item>
+            </div>
+            </div>
 </div>
 </body>
 </html>
