--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,13 +10,18 @@ html {
 
 .wrapper {
     width: 100%;
-    background-color: darkgreen;
+    /* background-color: darkgreen; */
+    box-shadow: 0 4px 2px -2px rgba(0,0,0,.2);
+}
+
+body {
+     font-family: 'Roboto', sans-serif;
 }
 
 nav {
     margin: 0 auto;
     width: 80%;
-    padding: 20px 10px 20px 30px;
+    /* padding: 20px 10px 20px 30px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -33,17 +38,24 @@ nav {
 
 .nav-item a {
     display: inline-block;
-    padding: 10px 15px;
+    padding: 10px 25px;
     text-decoration: none;
-    color: white;
+    color: #283C68;
+    border-bottom: 1px solid #fff;
 }
 
-.nav-item:hover {
-    background-color: white;
+.nav-item a:hover {
+    border-bottom: 1px solid #2C69FF;
+    font-weight: bolder;
+    color: #000
 }
+
+/* .nav-item:hover {
+    background-color: white;
+} */
 
 .nav-item:hover a {
-    color: darkgreen;
+    color: #000;
 }
 
 .logo img {
@@ -75,14 +87,89 @@ nav {
     text-shadow: 2px 2px #000022;
 }
 
-.content {
+.content-header {
     display: flex;
     justify-content: center;
+    margin: 5em 0;
+}
+
+.content-header h2 {
+    /* text-decoration: underline; */
+    padding: 0 2em 1em 2em;
+    border-bottom: 2px solid #000;
+}
+.content-body {
+    display: flex;
+    justify-content: center;
+    /* flex-direction: column; */
 }
 
 .catalouge {
     width: 80%;
-    background-color: yellow;
+    /* background-color: yellow; */
     display: flex;
     justify-content: center;
+}
+
+.restaurant {
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between; */
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: repeat(auto-fit, minmax(400px, 600px)); */
+    /* background-color: red; */
+}
+
+
+.card {
+    display: flex;
+    width: 40vw;
+    max-height: 30vh;
+    margin: 1em 0 0 0;
+    padding: 1em 0 1em 1em;
+    border: 1px solid #fff;
+}
+
+.card:hover{
+    background-color: #F2F7FF;
+    border: 1px solid #2C69FF;
+}
+
+.card-header {
+    display: flex;
+    justify-content: space-evenly;
+    /* padding-bottom: 1.5em; */
+}
+
+.card-description {
+    margin: 0 1.5rem;
+    display: flex;
+    flex-direction: column;
+    /* background-color: yellow; */
+}
+.card-title {
+    font-weight: bolder;
+    margin: 0.5em 0;
+}
+
+.card-thumbnail {
+    width:15vw;
+    height: 10vw;
+    display: flex;
+    justify-content: center;
+}
+
+.card-optional {
+    /* margin: 0.5em 0 0.4em 0; */
+}
+
+.card-description h3 {
+    color: #343352;
+}
+
+.card-description p {
+    line-height: 1.6;
+    color: #343352;
 }
