--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crimson+Pro:wght@500&family=Roboto&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
 </head>
 <body>
 <div class="wrapper">
@@ -36,15 +37,42 @@
     </h1>
     <!-- </div> -->
 </section>
-<div class="content">
+<section class="content">
     <div class="content-header">
         <h2 class="catalouge-label"> Find your favorite place </h2>
     </div>
     <div class="content-body">
         <div class="catalouge">
-            <catalouge-item></catalouge-item>
+            <catalouge-item>
+            </catalouge-item>
             </div>
             </div>
-</div>
+</section>
+<footer>
+    <div class="footer-content">
+        <h4> Crafted by me to everyone with spirit!</h4>
+
+        <div class="footer-social-media">
+            <!-- <ul> -->
+            <!-- <li> -->
+            <a href="https://twitter.com/lemillionee" class="social-icons social-icons-twitter">
+                <i class="fa fa-lg fa-twitter"></i>
+            </a>
+            <!-- </li> -->
+            <!-- <li> -->
+            <a href="https://linkedin.com/adi-purnomo" class="social-icons social-icons-linkedin">
+                <i class="fa fa-lg fa-linkedin"></i>
+            </a>
+            <!-- </li> -->
+            <!-- <li> -->
+            <a href="https://github.com/medival" class="social-icons social-icons-github">
+                <i class="fa fa-lg fa-github"></i>
+            </a>
+            <!-- </li> -->
+            <!-- </ul> -->
+        </div>
+    </div>
+    </footer>
 </body>
 </html>
+
