--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,7 +10,6 @@ html {
 
 .wrapper {
     width: 100%;
-    /* background-color: darkgreen; */
     box-shadow: 0 4px 2px -2px rgba(0,0,0,.2);
 }
 
@@ -21,7 +20,6 @@ body {
 nav {
     margin: 0 auto;
     width: 80%;
-    /* padding: 20px 10px 20px 30px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -41,11 +39,11 @@ nav {
     padding: 10px 25px;
     text-decoration: none;
     color: #283C68;
-    border-bottom: 1px solid #fff;
+    border-bottom: 2px solid #fff;
 }
 
 .nav-item a:hover {
-    border-bottom: 1px solid #2C69FF;
+    border-bottom: 2px solid #2C69FF;
     font-weight: bolder;
     color: #000
 }
@@ -91,12 +89,13 @@ nav {
     display: flex;
     justify-content: center;
     margin: 5em 0;
+    color: #343352;
 }
 
 .content-header h2 {
     /* text-decoration: underline; */
     padding: 0 2em 1em 2em;
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid #343352;
 }
 .content-body {
     display: flex;
@@ -147,11 +146,13 @@ nav {
     margin: 0 1.5rem;
     display: flex;
     flex-direction: column;
+    color: #343352;
     /* background-color: yellow; */
 }
 .card-title {
     font-weight: bolder;
     margin: 0.5em 0;
+    color: #000;
 }
 
 .card-thumbnail {
@@ -172,4 +173,49 @@ nav {
 .card-description p {
     line-height: 1.6;
     color: #343352;
+}
+
+/* Footer  */
+footer {
+    /* height: 10vh; */
+    padding-bottom: 5em;
+}
+.footer-content {
+    width: 50vw;
+    margin: 0 auto;
+    padding-top: 5em;
+}
+.footer-content h4 {
+    display: flex;
+    justify-content: center;
+    color: #343352;
+    padding: 1em 0 2em 0;
+}
+
+.footer-social-media {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-social-media a {
+    text-align: center;
+    padding: 1em;
+    margin: 0 0.5em;
+    width: 4em;
+    color: black;
+    border-radius: 0.1em;
+}
+
+.footer-social-media .social-icons-twitter:hover {
+     
+    color: #fff;
+    background-color: #00aced;
+}
+.footer-social-media .social-icons-linkedin:hover {
+     color: #fff;
+     background-color: #0073a4;
+}
+.footer-social-media .social-icons-github:hover {
+     color: #fff;
+     background-color: #5a32a3;
 }
