--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,13 +19,13 @@
         </a>
         <ul class="nav-links">
             <li class="nav-item">
-                <a href="#"> About </a>
+                <a href="#"> ABOUT </a>
             </li>
             <li class="nav-item">
-                <a href="#"> Favorite </a>
+                <a href="#"> FAVORITE </a>
             </li>
             <li class="nav-item">
-                <a href="#"> About US </a>
+                <a href="https://github.com/medival/"> ABOUT US </a>
             </li>
         </ul>
     </nav>
