Update: Catalouge label

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,7 +39,7 @@
 </section>
 <section class="content">
     <div class="content-header">
-        <h2 class="catalouge-label"> Find your favorite place </h2>
+        <h2 class="catalouge-label"> Discover Restaurant & Delicious Food </h2>
     </div>
     <div class="content-body">
         <div class="catalouge">
