--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -50,8 +50,8 @@
 </section>
 <footer>
     <div class="footer-content">
-        <h4> Crafted by me to everyone with spirit!</h4>
-
+        <h4> Crafted by me to everyone with spirit! </h4>
+        <h4> Copyright &copy; 2021 - Spicy Heat </h4>
         <div class="footer-social-media">
             <!-- <ul> -->
             <!-- <li> -->
