--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,7 @@
         </a>
         <ul class="nav-links">
             <li class="nav-item">
-                <a href="#"> ABOUT </a>
+                <a href="index.html"> HOME </a>
             </li>
             <li class="nav-item">
                 <a href="#"> FAVORITE </a>
