--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Spicy Heat </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crimson+Pro:wght@500&family=Roboto&display=swap"
         rel="stylesheet">
@@ -14,7 +13,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <nav class="navbar">
+    <nav class="navbar" id="drawer">
         <a href="#" class="logo">
             <img src="/images/logo/logo.png" alt="spicy-heat-logo logo">
         </a>
@@ -33,11 +32,9 @@
     </nav>
 </div>
 <section class="hero">
-    <!-- <div class="tint"> -->
     <h1 class="hero-title">
         Welcome <br> To Spicy Heat
     </h1>
-    <!-- </div> -->
 </section>
 <section class="content">
     <div class="content-header">
@@ -55,23 +52,15 @@
         <h4> Crafted by me to everyone with spirit! </h4>
         <h4> Copyright &copy; 2021 - Spicy Heat </h4>
         <div class="footer-social-media">
-            <!-- <ul> -->
-            <!-- <li> -->
             <a href="https://twitter.com/lemillionee" class="social-icons social-icons-twitter">
                 <i class="fa fa-lg fa-twitter"></i>
             </a>
-            <!-- </li> -->
-            <!-- <li> -->
             <a href="https://linkedin.com/adi-purnomo" class="social-icons social-icons-linkedin">
                 <i class="fa fa-lg fa-linkedin"></i>
             </a>
-            <!-- </li> -->
-            <!-- <li> -->
             <a href="https://github.com/medival" class="social-icons social-icons-github">
                 <i class="fa fa-lg fa-github"></i>
             </a>
-            <!-- </li> -->
-            <!-- </ul> -->
         </div>
     </div>
     </footer>
