--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,7 @@ html {
 }
 
 .wrapper {
-    width: 100%;
+    width: 100vw;
     box-shadow: 0 4px 2px -2px rgba(0,0,0,.2);
     background-color: #F2F7FF;
     position: fixed;
@@ -19,7 +19,9 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
+    overflow:auto;
 }
 
 nav {
@@ -65,7 +67,6 @@ nav {
 
 .hero {
     min-height: 60vh;
-    width: 100vw;
     background-image: url('/images/heros/hero-image_2.jpg');
     background-position: center;
     background-size: cover;
@@ -84,7 +85,7 @@ nav {
     padding: 10px 5em;
     text-align: center;
     font-family: 'Crimson Pro', serif;
-    font-size: 100px;
+    font-size: 3.3rem;
     text-shadow: 2px 2px #000022;
 }
 
@@ -96,14 +97,13 @@ nav {
 }
 
 .content-header h2 {
-    /* text-decoration: underline; */
     padding: 0 2em 1em 2em;
     border-bottom: 2px solid #343352;
 }
+
 .content-body {
     display: flex;
     justify-content: center;
-    /* flex-direction: column; */
 }
 
 .catalouge {
@@ -112,20 +112,19 @@ nav {
     justify-content: center;
 }
 
+h2.catalouge-label {
+    text-align: center;
+}
+
 .restaurant {
     display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 1fr 1fr;
-
-    /* Responisve */
-    /* grid-template-columns: minmax(1fr 1fr); */
+    grid-gap: 1em;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
 
 
 .card {
-    display: flex;
-    width: 40vw;
-    max-height: 30vh;
+    display: grid;
     margin: 1em 0 0 0;
     padding: 1em 0 1em 1em;
     border: 1px solid #fff;
@@ -139,7 +138,6 @@ nav {
 .card-header {
     display: flex;
     justify-content: space-evenly;
-    /* padding-bottom: 1.5em; */
 }
 
 .card-description {
@@ -147,7 +145,6 @@ nav {
     display: flex;
     flex-direction: column;
     color: #343352;
-    /* background-color: yellow; */
 }
 .card-title {
     font-weight: bolder;
@@ -155,13 +152,16 @@ nav {
     color: #000;
 }
 
-.card-thumbnail {
-    width:15vw;
-    height: 10vw;
-    display: flex;
+
+.thumbnail {
+    width: 300px;
     justify-content: center;
 }
 
+.card-thumbnail {
+    padding-bottom: 2rem;
+    margin: 0 auto;
+}
 
 .card-description h3 {
     color: #343352;
@@ -176,14 +176,9 @@ nav {
 footer {
     margin-top: 2em;
     background-color: #F2F7FF;
-    width: 100vw;
 }
 .footer-content {
-    width: 100vw;
-    /* margin: 0 auto; */
     padding-top: 1.5em;
-    /* background-color: red; */
-    /* position: fixed; */
     margin: 0;
 }
 .footer-content h4 {
@@ -222,3 +217,62 @@ footer {
      color: #fff;
      background-color: #5a32a3;
 }
+
+
+/* Tablet */
+@media screen and (min-width: 521px) and (max-width: 844px) {
+.nav-links {
+    display: none;
+}
+
+.restaurant {
+    display: grid;
+    grid-template-columns: repeat(1, 5fr);
+    grid-gap: 20px;
+};
+
+.card {
+    display: flex;
+    margin: 1em 0 0 0;
+    padding: 1em 0 1em 1em;
+    border: 1px solid #fff;
+}
+
+.card-thumbnail {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.hero h1 {
+    font-size: 3rem;
+}
+
+.thubmnail {
+    width: auto;
+}
+
+}
+
+/* End of Tablet */
+
+/* Mobile */
+@media screen and (min-width:0px) and (max-width: 520px){
+.nav-links {
+    display: none;
+}
+
+.hero h1 {
+    font-size: 2rem;
+}
+
+   .restaurant {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+};
+
+
+
+};
+/* End of Mobile */
+
