--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Web that provide list of cafe and restaurant" />
     <meta name="keywords" content="Spicy Heat" />
-    <meta name="theme-color" content="#db2a2a" />
+    <meta name="theme-color" content="#dc262a" />
     <title> Spicy Heat </title>
     <link href="http://fonts.cdnfonts.com/css/neue-helvetica" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/garamond" rel="stylesheet">
@@ -34,7 +34,7 @@
                         <a href="#" class="nav-links">FAVORITE</a>
                     </li>
                     <li>
-                        <a href="https://github.com/medival/" target="_blank" class="nav-links">ABOUT US</a>
+                        <a href="https://github.com/medival/" class="nav-links" target="_blank">ABOUT US</a>
                     </li>
                 </ul>
             </nav>
@@ -44,7 +44,7 @@
             <section class="hero">
                 <h1 class="hero__title"> Welcome <br> to Spicy Heat </h1>
                     <img class="hero__image" src="images/heros/hero-image_2.jpg" alt="Hero Image">
-                <a href="#main" class="hero__cta"> Discover </a>
+                <a href="#main" class="hero__cta"> DISCOVER </a>
             </section>
 
             <section class="resto" id="main">
