fix: Change hamburger element to button

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,9 +20,9 @@
     <header>
         <div class="nav__wrapper">
             <nav class="navbar">
-                <span id="navbar-toggle" id="hamburger">
+                <button id="navbar-toggle" id="hamburger">
                     <i class="fa fa-lg fa-bars"></i>
-                </span>
+                </button>
                 <a href="#" id="logo">
                     <img class="navbar__logo" src="images/logo/logo.png" alt="logo-spicy-heat" srcset="">
                 </a>
